# JC3248W535EN

./: CLAUDE.md  CMakeLists.txt  MIGRATION_SUMMARY.md  MULTI_PROJECT_SETUP.md  PLATFORMIO_PATH_FIX.md  README.md  WINDOWS_BATCH_SCRIPTS.md  create_project_scripts.bat  pio_find.bat  platformio.ini  platformio.ini.example-multiproject  sdkconfig.defaults
.claude/: settings.local.json
libraries/esp_bsp/: CMakeLists.txt  library.json
projects/: README.md
projects/demo_lvgl/: build.bat  clean.bat  monitor.bat  upload.bat
projects/demo_lvgl/src/: CMakeLists.txt  main.c
projects/weather_station/: CREATED.md  README.md  build.bat  clean.bat  monitor.bat  sdkconfig.defaults  upload.bat
projects/weather_station/src/: main.c
src/: DEMO_LVGL.c
